--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
             <!--<span style="font-size: 36px; line-height: 1; position: relative; top: 32px">Universal Viewer Usability Testing</span>-->
         </div><br />
 
-        <div class="uv" data-no-load="true" data-config="/examples/config/default-config.js" style="width:640px; height:480px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" style="width:640px; height:480px; background-color: #000"></div>
 		
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 		
         <div style="width:640px; height:480px; margin-left: 20px">
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in Ghent-Bruges-Ostend.</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</a><br /><br />
-            <a href="?config=%2Fconfig%2Fdefault-config.js&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522782.0x000002/manifest.json">Ethnographical map of Austria-Hungary, GSGS 2870.</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022551578.0x000002/manifest.json">The Grey Brigade and others.</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522761.0x000002/manifest.json">Diagram in perspective to illustrate control of water in Ghent-Bruges-Ostend.</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522778.0x000002/manifest.json">Ethnographical map [Eastern Europe], GSGS 3703a.</a><br /><br />
+            <a href="?manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100022522782.0x000002/manifest.json">Ethnographical map of Austria-Hungary, GSGS 2870.</a><br /><br />
         </div>
 
     </main>
