--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 		
-        <div style="width:640px; height:480px; margin-left: 20px">
+        <div class="links" style="width:640px; height:480px; margin-left: 20px">
             <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_000000000144/manifest.json">Proceedings at Peebles</a><br /><br />
             <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100015688900.0x000002/manifest.json">Pictures of Light</a><br /><br />
             <a href="?jsonp=true&manifest=http://v8l-webtest1.bl.uk:88/IIIFMetadataService/ark:/81055/vdc_100002273023.0x000002/manifest.json">History of the Volunteer Movement in Cheshire, 1914-1920.</a><br /><br />
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript" src="utils.js"></script>
+    <script type="text/javascript" src="testids.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
