--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
         <div>
             <input id="jsonp" type="checkbox"><label for="jsonp">JSONP</label>
-            <p>Forces the viewer to use JSONP to load manifests and info.json. Default behaviour is to use JSONP for IE<10</p>
+            <p>Forces the viewer to use JSONP to load manifests and info.json. Default behaviour is to use JSONP for IE<10.</p>
+        </div>
+
+        <div>
+            <input id="testids" type="checkbox"><label for="testids">Test Ids</label>
+            <p>Adds unique ids to viewer buttons for testing convenience.</p>
         </div>
 
         <h3>Manifest</h3>
